# Robot-Design-Lab-G6

./: README.md
Abgabe 1/Aufgabe 1.2/: led.cpp  led.hpp  main.cpp
Abgabe 1/Aufgabe 2.2 PC/: CommunicationStub.cpp  CommunicationStub.h  usart_stub.cpp
Abgabe 1/Aufgabe 2.3/: Communication.h  USARTCommunication.cpp  USARTCommunication.h  main.cpp  protocol.cpp  protocol.hpp
Abgabe 1/Aufgabe 2.3/firmware Main/: main.cpp
Abgabe 1/Aufgabe 3/engine/: engine.cpp  engine.hpp  main.cpp  test
Abgabe 1/tests/: CMakeLists.txt
Abgabe 1/tests/pc/: USARTCommunication.cpp  USARTCommunication.h  main.cpp
Abgabe 1/tests/robot/: main.cpp
Abgabe 1/tests/stubs/: led_stub.cpp
Aufgabe 2/: servojohannes.cpp
Aufgabe 2/firmware/: CMakeLists.txt  CodeSourcery.cmake  crc.c  crc.h  engine.cpp  engine.hpp  led.cpp  led.hpp  main.cpp  openocd.cfg  protocol.cpp  protocol.hpp  servo.cpp  servo.hpp  stm32_specific.h  stm_h103_rom.ld
Aufgabe 2/firmware/common/: stm32f10x_conf.h
Aufgabe 2/firmware/drivers/: assert.c  assert.h  i2c.c  i2c.h  syscalls.c  usart.c
Aufgabe 2/firmware/tests/: CMakeLists.txt
Aufgabe 2/firmware/tests/pc/: CMakeLists.txt  ComProtocol.cpp  ComProtocol.hpp  Communication.hpp  CommunicationStub.cpp  CommunicationStub.hpp  UARTCommunication.cpp  UARTCommunication.hpp  cmake_install.cmake  main.cpp
Aufgabe 2/firmware/tests/robot/: CMakeLists.txt  main.cpp
Aufgabe 2/firmware/tests/stubs/: CMakeLists.txt  IPCCom.cpp  IPCCom.hpp  led_stub.cpp  printf_stub.c  usart_stub.cpp  various_stubs.cpp
RDLÜ01G06/engine/: engine.cpp  engine.hpp
RDLÜ01G06/firmware/: .gitignore  CMakeLists.txt  flash-bin.script  main.cpp  openocddebug.cfg  servo.cpp  stm32_specific.c
RDLÜ01G06/firmware/common/: system_stm32f10x.c
RDLÜ01G06/firmware/drivers/: printf.h
RDLÜ01G06/firmware/tests/pc/: CMakeLists.txt
RDLÜ01G06/firmware/tests/stubs/: CommunicationStub.h  usart_stub.cpp  various_stubs.cpp
RDLÜ01G06/pc/: USARTCommunication.h  main.cpp
Z1/firmware/: CMakeLists.txt  CodeSourcery.cmake  engine.cpp  engine.hpp  led.hpp  main.cpp  protocol.cpp  protocol.hpp  protocol.hpp.gch
Z1/firmware/common/: system_stm32f10x.c
Z1/firmware/drivers/: printf.c  usart.h
Z1/firmware/exercises/exercise1/: USARTCommunication.cpp
Z1/firmware/tests/robot/: CMakeLists.txt
Z1/firmware/tests/stubs/: CMakeLists.txt  usart_stub.cpp
